# sampark-ai

./: .cursorrules  .env.example  README.md  pyproject.toml
.cursor/rules/: project-rules.mdc  testing.mdc
backend/sampark/: __main__.py  main_test.py
backend/sampark/adapters/email/: client.py  client_test.py  service.py  service_test.py
backend/sampark/db/: database.py  models.py
backend/sampark/workflows/: __init__.py
backend/tests/: __init__.py  fixtures.py
backend/tests/factories/: __init__.py  email_message.py  email_thread.py
docs/: email-testing.md  high-level-overview.md  high_level_overview.md  milestones.md  technical-design.md  technical_design.md
docs/milestones/: milestone-2.md
